<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProduct">

    <TextView
        android:id="@+id/name"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/price"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/country"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/numProduct"
        android:layout_width="145dp"
        android:layout_height="61dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintVertical_bias="0.46" />

    <EditText
        android:id="@+id/addNumProduct"
        android:layout_width="199dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/zeljeniBroj"
        android:inputType="number"
        android:text="@string/jedan"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.46" />

    <TextView
        android:id="@+id/fastDelivery"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/standardDelivery"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/escape"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="45dp"
        android:text="@string/nazad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addCart"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="45dp"
        android:text="@string/dodajUKorpu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>